--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -3,7 +3,7 @@
 		"greeting": "Welcome to Original Coast Clothing {{userName}}! Click get started to enjoy our sample automated messaging experience. If you want to build a similar one visit https://fb.me/get-sample-oc-ig"
 	},
 	"menu": {
-		"support": "Müşteri Desteği",
+		"support": "Müşteri Desteği, ucuncudeneme calısıyor",
 		"order": "Where is my order?",
 		"help": "Reach Product Expert",
 		"suggestion": "New Products",
